Fix display flex-start on smaller devices

--- a/src/components/PokemonIVTables.scss
+++ b/src/components/PokemonIVTables.scss
@@ -23,7 +23,6 @@
 
 .ivs-nav {
     background-color: unset;
-    justify-content: center;
 }
 
 .MuiTableContainer-root,
