--- a/src/components/PokemonSearchStrings.scss
+++ b/src/components/PokemonSearchStrings.scss
@@ -6,7 +6,6 @@
 
 .ivs-nav {
     background-color: unset;
-    justify-content: center;
 }
 
 .search-strings-container {
