--- a/src/views/pokedex.scss
+++ b/src/views/pokedex.scss
@@ -12,7 +12,6 @@
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    justify-content: flex-start;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     background-color: var(--bodyBackgroundColor);
@@ -22,7 +21,7 @@
         padding: 0;
         gap: 6px;
         list-style: none;
-        margin: 9px 0px;
+        margin: 9px auto;
     }
 }
 
